<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:background="@color/azul_fundo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/vermelho"
                app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:cardBackgroundColor="@color/vermelho"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/login_title"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/vermelho"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/inputEmail"
                        app:boxBackgroundColor="@color/white"
                        app:hintTextColor="@color/vermelho"
                        android:textColorHint="@color/vermelho">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/preto_input" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/inputPassword"
                        app:boxBackgroundColor="@color/white"
                        app:hintTextColor="@color/vermelho"
                        android:textColorHint="@color/vermelho">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/preto_input"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/checkboxRemember"
                        android:textColor="@color/preto_input"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/buttonLogin"
                        android:backgroundTint="@color/vermelho"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnCadastro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:stateListAnimator="@null"
                        android:text="@string/buttonCreateAccount"
                        android:textColor="@color/preto_botao_auxiliar"
                        android:textAllCaps="false" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>