<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CadastroActivity"
    android:background="@color/azul_fundo">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/vermelho"
        app:titleTextColor="@color/white"
        app:navigationIcon="@drawable/back_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/titleRegister" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/vermelho"
                app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:cardBackgroundColor="@color/vermelho"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="50dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.cardview.widget.CardView>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="20dp"
                android:background="@drawable/background_circulo_cinza"
                android:src="@drawable/create_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </ImageView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/vermelho"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/inputName"
                        app:boxBackgroundColor="@color/white"
                        app:hintTextColor="@color/vermelho"
                        android:textColorHint="@color/vermelho">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/preto_input" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/inputEmail"
                        app:boxBackgroundColor="@color/white"
                        app:hintTextColor="@color/vermelho"
                        android:textColorHint="@color/vermelho">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/preto_input" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/inputPassword"
                        app:boxBackgroundColor="@color/white"
                        app:hintTextColor="@color/vermelho"
                        android:textColorHint="@color/vermelho">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/preto_input"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnFinalizaCadastro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:text="@string/buttonSave"
                        android:backgroundTint="@color/vermelho"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>